# flight-manager

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml  dockerfile
.sqlx/: query-0a9034e2c04926f306e318044585ac820533d408c63c40fa466de2808c773324.json  query-13fd7e5e43284074cb6b924727186a5d4a62270e9db576cc01a5c8fe6d2995ce.json  query-16fed48523e1120682f1dbd20114b732e4961fb9e3b9614d75f3ced17258176e.json  query-1a4d8f84523c24dbbfebc0f58df3bfa2ab89a8c1ff54699d9d1dd63c9420d5f8.json  query-27458831a71c2a121f2e4dc1887d159a8ec50c36cb10392cb6077791f5a953f8.json  query-2e90e5d2be5f47a6f3a79556bf1cacc34265e0c4f697881b16e120cc60ab51c8.json  query-3162546dfd51343913f5e5df3c485daab850b7b3921490168ae9d91043ef1bdf.json  query-3813543b722a2e5c4f803b706200a9e0c31c6901a3e5966933cf64268e15d1a5.json  query-390e23249ff44eddfd4e94053cd0c5bbfaa20e7afa61bf4ead43f89768c437b2.json  query-3e9301ff480b94e3a40641ef8ff85376e374059a43c978543d4437f9180c837c.json  query-40f5644e47b4ad46167c0416935e685ad7e52be37f2b94ba89f190d1f0e5f206.json  query-4200d5f1740a5e4afe3d212d7ba64a7879d1333cfa28387c6e27f35618675e32.json  query-4ac22f0c6366c94efe7b88fa17ff9b47a6a949ba94d5d6b112e96f4f60b0e48a.json  query-52119e7121824186aecce5d7f5c72cbfda2f57d70650abec6762362704760729.json  query-5ac54c96e4543a4b376d14c83a54b03ed33a6af3ac8a0d3d20fc8584eb8384cf.json  query-62f36af7063580a4ea38ed09912ac974a45123c1e446ddf661d15364ec819f21.json  query-64459da5cf904f519e033f284064b64dc4dc2fc1919cd30ea526ff37a1d9a386.json  query-664ddcd551f178ab61512ee9821bae9c711503784c01b8ce2b87a00ef3612ebb.json  query-774ce66f95cc7807c502fa95cdf1027165de401f550ae8c68cfe8b0583d69ffb.json  query-77b5491be31a7977d718700b6711f45852f45da1f76530d6d790837e879af4b1.json  query-7d0b72c76c928385a95739bb4497840a8f936275fc3b26928a8058e2a42d3cf8.json  query-852600bdac39314d288624731bc7d38fe268cb15a366c7bb0b677f6b47e82d23.json  query-868ed15ec262d683378a0a354539cff41dca2a9809b7be0384105418696338ff.json  query-889f649dcabc4f2b2970068836a7f46c28b924616b53f027c1819ef378910a0b.json  query-977f25a52843399457276a85fb84e8523d8030771aa1e1b3aab35f88b3a8fa7b.json  query-9ac2b5f7411eb522972d3e186f041a3f481872b975a5673ff57efd287fb56e6b.json  query-a18942100bbd2867517da14c95c28817acb8eac56dcea1e184cda6aff1f7d42d.json  query-a327edd3ff8390d40d5d55c4bd20eacf792632dde0f6b9b4e8d31b1f2df9f711.json  query-a338b832b6eb64f9fd0cba697cb096cfb53f45aec937f3d2b4fd28302ab8c22a.json  query-a4bb92a029bf130f5f0bc86c96dbae164d981c9adb622827f0d3185855e5d0c6.json  query-ad9b84b9b9575ac030abb643dd5f63af01ef386e6477648431dfd9077412d638.json  (+14 more)
flightmngr-proto/: Cargo.toml  build.rs
(+32 files in other folders)
