[package]
name = "flight-mngr"
version = "0.1.0"
edition = "2021"

[dependencies]
envy = "0.4.2"
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "uuid", "runtime-tokio", "time"] }
time = "0.3.31"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
tonic-reflection = "0.10.2"
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.10.2"
