[package]
name = "flightmngr"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "flightmngr"
path = "src/main.rs"

[lib]
name = "flightmngr"
path = "src/lib.rs"

[dependencies]
envy = "0.4.2"
itertools = "0.12.1"
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "uuid", "runtime-tokio", "time"] }
tempfile = "3.10.1"
thiserror = "1.0.57"
time = "0.3.31"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
tokio-stream = "0.1.14"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11.0"
