[package]
edition = "2021"
name = "flightmngr"
publish = false
version = "0.1.0"

[[bin]]
name = "flightmngr"
path = "src/main.rs"

[lib]
name = "flightmngr"
path = "src/lib.rs"

[workspace]
members = ["flightmngr-proto"]

[dependencies]
envy = "0.4.2"
itertools = "0.12.1"
prost = "0.12.3"
prost-types = "0.12.3"
proto = { package = "flightmngr-proto", version = "0.1.0", path = "flightmngr-proto" }
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "time",
    "uuid",
] }
thiserror = "1.0.57"
time = "0.3.31"
tokio = { version = "1.34.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = "0.1.14"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
